task/27615-fix bug i18n-ten truong

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,7 +64,7 @@ en:
       orderID: Order ID
       name: Name
       location: Location
-      roll: Roll
+      roll: Role
       action: Delete
     user:
       you_sure: You sure?
